<?xml version="1.0"?>
<resources>
    <string name="begateway_form_hint_cvv" translatable="false">@string/begateway_cvv</string>
    <string name="begateway_ok">OK</string>
    <string name="begateway_cancel">Cancel</string>
    <string name="begateway_turn_on">Turn on</string>
    <string name="begateway_error">Error</string>
    <string name="begateway_error_during_scanning">An error occurred during scanning</string>
    <string name="begateway_turn_on_nfc_message">Please turn on NFC</string>
    <string name="begateway_nfc_not_supported_message">NFC not supported</string>
    <string name="begateway_nfc_attach_bank_card">Please attach bank card to the phone</string>
    <string name="begateway_scan_by_camera">Scan by camera</string>
    <string name="begateway_scan_by_nfc">Scan by NFC</string>
    <string name="begateway_please_wait">Please wait</string>

    <string name="begateway_form_hint_card_number">Card number</string>
    <string name="begateway_form_hint_expiration">Expiration date</string>
    <string name="begateway_form_hint_cardholder_name">Name on card</string>
    <string name="begateway_cvv">CVV</string>
    <string name="begateway_cvc">CVC</string>
    <string name="begateway_cid">CID</string>
    <string name="begateway_cvn">CVN</string>
    <string name="begateway_month">Month</string>
    <string name="begateway_year">Year</string>
    <string name="begateway_card_number_required">Card number is required</string>
    <string name="begateway_card_number_invalid">Card number is invalid</string>
    <string name="begateway_cvv_required">%s is required</string>
    <string name="begateway_cvv_invalid">%s is invalid</string>
    <string name="begateway_expiration_required">Expiration date is required</string>
    <string name="begateway_expiration_invalid">Expiration date is invalid</string>
    <string name="begateway_cardholder_name_required">Name on card is required</string>
    <string name="begateway_savecard">Save card</string>
    <string name="begateway_button_pay">Pay</string>
    <string name="begateway_secure_info">Secure payment is provided by %s</string>
    <string name="begateway_app_name" translatable="false">BeGateway</string>
    <string name="begateway_samsung_pay_not_set_up_error_message">"Samsung Pay need to update or to complete setup."</string>
    <string name="begateway_payment_samsung_pay_title" translatable="false">"Samsung Pay"</string>


</resources>
